# Advent-Of-Code2024-in-C-23

./: .gitignore  CMakeLists.txt  README.md
01/: main.c
02/: main.c
03/: main.c
04/: main.c
common/: file_handling.c  file_handling.h  interpreter.c  interpreter.h  lexer.c  lexer.h  ordered_list.c  ordered_list.h  orderedlist.c  orderedlist.h  parser.c  parser.h  vector.c  vector.h  vector3d.c  vector3d.h
